fix vertical alignment of cards

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -96,7 +96,7 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
 }
 
 #buttons {
